@@ -56,7 +56,7 @@ export(erdos.renyi.game, random.graph.game, degree.sequence.game,
 
 export(edge.betweenness.community, community.cut, edge.type.matrix,
        modularity, spinglass.community, walktrap.community,
-       edge.betweenness.community.merges)
+       edge.betweenness.community.merges, fastgreedy.community)
 
 S3method("as.dendrogram", igraph.walktrap)
 S3method("as.dendrogram", igraph.ebc)
