@@ -1,3 +1,8 @@
+2007-04-06  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/community.R (fastgreedy.community) : added
+	* interfaces/R/src/rinterface.c (R_igraph_community_fastgreedy) : added
+
 2007-04-04  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/community.R (.memberDend)
